...
                pt.vcc.vccmusic.ui.theme.appBackgroundBrush(
                    darkTheme = MaterialTheme.colorScheme.background == DarkBackgroundBottom,
                ),
            )
            .padding(contentPadding)
            .then(swipeModifier)
            .testTag("screen-now-playing"),
    ) {
        val landscape = maxWidth > maxHeight
        val contentModifier = Modifier
            .then(if (landscape) Modifier else Modifier.verticalScroll(scrollState))
            .padding(horizontal = 16.dp, vertical = 8.dp)

...
